[metadata]
name = example-package-trevorb1
version = 0.0.1
author = Trevor Barnes
author_email = trevor_barnes@sfu.ca
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/trevorb1/SEE-891
project_urls =
    Bug Tracker = https://github.com/trevorb1/SEE-891/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
